2011-08-16  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Philip:
	bug #31386: A "BUILD.svn" or similar "how to get started" doc would be helpful
	* BUILD-FROM-SVN: New file.

2011-08-15  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Nic Jones:
	bug #32539: [Documentation][Patch] Man page is misleading
	re: Dragon & PDI
	* doc/avrdude.texi: Update information about PDI connections
	on AVR Dragon

2011-08-12  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* usbasp.c: Add <stdint.h> so this actually compiles
	again.

2011-08-12  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Contributed by tixiv@gmx.net:
	bug #33345: File auto detection as binary doesn't open
	file in binary mode on Windows
	* fileio.c: Move the decision about opening files in
	binary mode until before the fopen() call.

2011-06-16  Thomas Fischl <tfischl@gmx.de>

	* avrdude.conf.in: Fix part id of ATtiny9.

2011-05-28  Thomas Fischl <tfischl@gmx.de>

	Based on patch #7440 commited by Slawomir Fraś:
	* usbasp.c: added TPI support for USBasp
	* usbasp.h: (Ditto.)

2011-05-11  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* avrdude.conf.in: Add support for ATmega168P.

2011-05-11  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* avrdude.conf.in: Fix abbreviated name for ATmega324PA.

2011-05-11  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Lech Perczak:
	bug #30946: Added support for ATmega8/16/32U2
	* avrdude.conf.in: Add ATmega8/16/32U2 entries.

2011-05-11  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by David A Lyons:
	patch #7393: Adding ATtiny4313 Device to avrdude.conf.in
	* avrdude.conf.in: Add ATtiny4313 data.

2011-05-11  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* usb_libusb.c: Bump timeout values to allow for slow clock
	speeds.
	* jtagmkII.c: (Ditto.)

2011-03-04  Eric B. Weddington  <eric.weddington@atmel.com>

	Thanks to Vitaly Chernookiy for the patch.
	* avrdude.conf.in: Add support for atmega324pa.
	* ChangeLog-2010: New file, rotate ChangeLog for new year.